--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "dayjs-range",
   "version": "1.0.0",
   "description": "Range extends For dayjs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "src/index.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +25,13 @@
   },
   "homepage": "https://github.com/imwh0im/dayjs-range#readme",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "@types/node": "^16.11.3",
-    "dayjs": "^1.10.7",
     "jest": "^27.3.1",
     "typescript": "^4.4.4"
-  }
+  },
+  "dependencies": {
+    "dayjs": "^1.10.7"
+  },
+  "type": "module"
 }
