--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "Range extends For dayjs",
   "main": "dist/index.js",
-  "typings": "src/index.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.json && npm run build:type",
+    "build:type": "tsc -p tsconfig.type.json",
+    "lint": "eslint \"src/**/*.ts\"",
+    "test": "jest",
+    "test:cov": "jest --coverage --no-cache --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -25,13 +29,23 @@
   },
   "homepage": "https://github.com/imwh0im/dayjs-range#readme",
   "devDependencies": {
-    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.3",
-    "jest": "^27.3.1",
-    "typescript": "^4.4.4"
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "mockdate": "^3.0.5",
+    "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "dayjs": "^1.10.7"
-  },
-  "type": "module"
+  }
 }
