ci(pull-request): add check

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -p tsconfig.json && npm run build:type",
     "build:type": "tsc -p tsconfig.type.json",
     "lint": "eslint \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest",
     "test:cov": "jest --coverage --no-cache --detectOpenHandles",
     "semantic-release": "semantic-release"
