--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,6 +32,10 @@ jobs:
       run: |
         npm run format
 
+    - name: Test
+      run: |
+        npm run test
+
     - name: Build
       run: |
         npm run build
