--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,16 +10,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 16
+
       - name: Install dependencies
         run: npm ci
+
       - name: Check Lint
         run: npm run lint
+
+      - name: Check Format
+        run: npm run format
+
+      - name: Test
+        run: npm run test
+
       - name: Build
         run: npm run build
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
