fix: deploy npm

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/imwh0im/dayjs-range.git"
+    "url": "https://github.com/imwh0im/dayjs-range-extend.git"
   },
   "keywords": [
     "dayjs",
